fix bug 93025. delay the checking of access key pref so we will use the user's pref instead of the default vaule in the pref. r=jbetak sr=kin